[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/rootLevel.gd" type="Script" id=3]

[node name="levelRoot" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="main" parent="." instance=ExtResource( 1 )]

[node name="pauseScreen" type="CanvasLayer" parent="."]
visible = false

[node name="menu" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -10.0
margin_right = 24.0
margin_bottom = 10.0
text = "Menu"

[node name="quit" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -144.0
margin_right = 20.0
margin_bottom = -124.0
text = "Quit"

[node name="resume" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.0
margin_top = 126.0
margin_right = 33.0
margin_bottom = 146.0
text = "Resume"

[node name="Paused" type="Label" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -60.0
margin_right = 24.0
margin_bottom = -29.0
text = "Paused
"
valign = 1

[node name="restart" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 42.0
margin_top = -172.0
margin_right = 99.0
margin_bottom = -152.0
text = "Restart"

[node name="deathScreen" type="CanvasLayer" parent="."]
visible = false

[node name="menu" type="Button" parent="deathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -10.0
margin_right = 24.0
margin_bottom = 10.0
text = "Menu"

[node name="quit" type="Button" parent="deathScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -144.0
margin_right = 20.0
margin_bottom = -124.0
text = "Quit"

[node name="restart" type="Button" parent="deathScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -144.0
margin_right = 20.0
margin_bottom = -124.0
text = "Quit"

[node name="Paused" type="Label" parent="deathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -60.0
margin_right = 24.0
margin_bottom = -29.0
text = "Paused
"
valign = 1

[connection signal="pressed" from="pauseScreen/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="pauseScreen/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="pauseScreen/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pauseScreen/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="deathScreen/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="deathScreen/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="deathScreen/restart" to="." method="_on_restart_pressed"]
